Better header formatting

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <title>PowerAI Vision Object Detection</title>
     </head>
     <body>
-        <h1>PowerAI Vision</h1>
-        <h1>Object Detection</h1>
+        <header>
+            <h1>PowerAI Vision<br />Object Detection</h1>
+        </header>
     </body>
 
     <script src="js/jquery-2.1.1.min.js"></script>
