App using env for endpoint. Misc fixes.
Replace hard-coded endpoint w/ env setting.
Move dynamic part to article for easy wiping.
Count by label to demo that we can count.
Color labels and make the text more readable with a background rect.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         <form enctype="multipart/form-data" action="/uploadpic" target="mytarget" method="POST">
             Choose a file to upload:
             <br />
+            <br />
             <input name="files" type="file" />
             <br />
             <input type="submit" value="Upload File" />
         </form>
         <iframe id="mytarget" name="mytarget" style="width:0; height:0; border:0; border:none" src=""></iframe>
+        <article />
     </main>
 
 </html>
