Fix favicon on tab, add icons to use for powerai-vision.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>PowerAI Vision Object Detection</title>
+        <link rel='shortcut icon' type='image/x-icon' href='favicon16.png' />
     </head>
     <body>
         <header>
